--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "gloomhaven-character-planner",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "test": "jest --coverage",
-    "check-types": "tsc",
-    "check": "npm run lint && npm run check-types && npm run test"
-  },
-  "dependencies": {
-    "@ceva24/worldhaven-character-mats-gh": "^1.0.0",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@types/node": "17.0.34",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "husky": "^8.0.1",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
-    "typescript": "4.6.4"
-  }
+    "name": "gloomhaven-character-planner",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "format": "prettier --write .",
+        "check-format": "prettier --check .",
+        "lint": "xo",
+        "check-types": "tsc",
+        "test": "jest --coverage",
+        "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
+        "fc": "npm run format && npm run check",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@ceva24/worldhaven-character-mats-gh": "^1.0.0",
+        "next": "12.1.6",
+        "react": "18.1.0",
+        "react-dom": "18.1.0"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.0.0",
+        "@commitlint/config-conventional": "^17.0.0",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.2.0",
+        "@types/node": "17.0.34",
+        "@types/react": "18.0.9",
+        "@types/react-dom": "18.0.4",
+        "eslint": "8.15.0",
+        "eslint-config-next": "12.1.6",
+        "eslint-config-xo-react": "^0.27.0",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "husky": "^8.0.1",
+        "jest": "^28.1.0",
+        "jest-environment-jsdom": "^28.1.0",
+        "typescript": "4.6.4",
+        "xo": "^0.49.0"
+    }
 }
