--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
         "format": "prettier --write .",
         "check-format": "prettier --check .",
         "lint": "xo",
-        "check-types": "tsc",
+        "check-types": "npm run check-types:next && npm run check-types:cypress",
+        "check-types:next": "tsc",
+        "check-types:cypress": "tsc --project cypress/tsconfig.json",
         "test": "jest --coverage",
+        "cypress": "cypress run",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run format && npm run check",
         "prepare": "husky install"
@@ -23,11 +26,13 @@
     "devDependencies": {
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
+        "@testing-library/cypress": "^8.0.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@types/node": "17.0.34",
         "@types/react": "18.0.9",
         "@types/react-dom": "18.0.4",
+        "cypress": "^9.6.1",
         "eslint": "8.15.0",
         "eslint-config-next": "12.1.6",
         "eslint-config-xo-react": "^0.27.0",
