--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "check-types:cypress": "tsc --project cypress/tsconfig.json",
         "test": "jest --coverage",
         "cypress": "cypress run",
+        "lighthouse": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run format && npm run check",
         "prepare": "husky install"
@@ -26,6 +27,7 @@
     "devDependencies": {
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
+        "@lhci/cli": "^0.9.0",
         "@testing-library/cypress": "^8.0.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
