--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "check-types": "npm run check-types:next && npm run check-types:cypress",
         "check-types:next": "tsc",
         "check-types:cypress": "tsc --project cypress/tsconfig.json",
-        "test": "jest --coverage",
+        "test": "jest",
         "cypress": "cypress run",
         "lighthouse": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
