--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "check-types:next": "tsc",
         "check-types:cypress": "tsc --project cypress/tsconfig.json",
         "test": "jest",
-        "cypress": "cypress run",
-        "lighthouse": "lhci autorun",
+        "e2e": "cypress run",
+        "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run format && npm run check",
         "prepare": "husky install"
@@ -28,6 +28,8 @@
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
         "@lhci/cli": "^0.9.0",
+        "@percy/cli": "^1.2.1",
+        "@percy/cypress": "^3.1.1",
         "@testing-library/cypress": "^8.0.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
