ci: fix issues in performance and e2e workflows

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: cypress-io/github-action@a45da79a2ea5457403a080c4fcc0ea3daf6924a0 # v3.0.6
         with:
           build: npm run build
-          start: npm run serve
+          start: npm start
           command-prefix: percy exec --
           record: true
           group: pull_request
