--- a/.github/workflows/performance-checks.yml
+++ b/.github/workflows/performance-checks.yml
@@ -23,6 +23,6 @@ jobs:
       - run: npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: npm run lighthouse
+      - run: npm run perf
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
