--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -22,12 +22,12 @@ jobs:
         with:
           build: npm run build
           start: npm start
-          command-prefix: percy exec --
-          record: true
-          group: pull_request
-          tag: ${{ github.event_name }}
+          #command-prefix: percy exec --
+          #record: true
+          #group: pull_request
+          #tag: ${{ github.event_name }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          #PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
