--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,11 +23,11 @@ jobs:
           build: npm run build
           start: npm start
           #command-prefix: percy exec --
-          #record: true
+          record: true
           #group: pull_request
           #tag: ${{ github.event_name }}
         env:
           #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          #CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           #PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
