fix: debug e2e tests workflow

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -24,8 +24,8 @@ jobs:
           start: npm start
           #command-prefix: percy exec --
           record: true
-          #group: pull_request
-          #tag: ${{ github.event_name }}
+          group: pull_request
+          tag: ${{ github.event_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
