--- a/.github/workflows/performance-checks.yml
+++ b/.github/workflows/performance-checks.yml
@@ -10,7 +10,7 @@ on:
     - cron: "00 12 * * 1"
 
 jobs:
-  lhci:
+  performance-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
