fix: debug e2e tests workflow

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -24,6 +24,7 @@ jobs:
           start: npm start
           #command-prefix: percy exec --
           record: true
+          group: "end to end tests"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
