ci: add GitHub workflows (#1)
* docs: update README with link to Husky

* ci: add GitHub workflows

* ci: add npm registry auth to build workflow

* ci: update name of end-to-end tests workflow

* ci: remove static analysis workflow

cannot be run in private repositories

* ci: add npm registry auth to all workflows

* ci: add Percy integration

* ci: fix issues in performance and e2e workflows

* fix: debug e2e tests workflow

* ci: enable Percy integration

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "check-types": "npm run check-types:next && npm run check-types:cypress",
         "check-types:next": "tsc",
         "check-types:cypress": "tsc --project cypress/tsconfig.json",
-        "test": "jest --coverage",
-        "cypress": "cypress run",
-        "lighthouse": "lhci autorun",
+        "test": "jest",
+        "e2e": "cypress run",
+        "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run format && npm run check",
         "prepare": "husky install"
@@ -28,6 +28,8 @@
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
         "@lhci/cli": "^0.9.0",
+        "@percy/cli": "^1.2.1",
+        "@percy/cypress": "^3.1.1",
         "@testing-library/cypress": "^8.0.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
