--- a/.github/workflows/triage.yml
+++ b/.github/workflows/triage.yml
@@ -2,12 +2,15 @@ name: triage
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
 
 jobs:
   triage:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/labeler@main
+      - uses: actions/labeler@v4
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
