feat: add basic class selector (#6)
* build: add Sharp dependency for production image optimisation

* feat: add a character selector and character mats

* chore: add worldhaven as a submodule

* refactor: move character select to its own component

* build: remove unneeded worldhaven package dependency

* ci: remove codeql config

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@ceva24/worldhaven-character-mats-gh": "^1.0.0",
         "next": "12.1.6",
         "react": "18.1.0",
-        "react-dom": "18.1.0"
+        "react-dom": "18.1.0",
+        "sharp": "^0.30.4"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.0.0",
