test: add Cypress tests for character details

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -5,5 +5,5 @@
         "types": ["node", "cypress", "@testing-library/cypress"],
         "noEmit": true
     },
-    "include": ["**/*.tsx"]
+    "include": ["**/*.ts", "**/*.tsx"]
 }
