--- a/.github/workflows/performance-checks.yml
+++ b/.github/workflows/performance-checks.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          submodules: true
       - uses: actions/setup-node@v3
         with:
           node-version-file: .nvmrc
