chore: update prettier printWidth to 120 and reformat code

--- a/.xo-config.json
+++ b/.xo-config.json
@@ -1,10 +1,5 @@
 {
-    "extends": [
-        "xo-react",
-        "plugin:jsx-a11y/strict",
-        "plugin:prettier/recommended",
-        "plugin:@next/next/recommended"
-    ],
+    "extends": ["xo-react", "plugin:jsx-a11y/strict", "plugin:prettier/recommended", "plugin:@next/next/recommended"],
     "rules": {
         "react/jsx-indent": "off",
         "react/jsx-indent-props": "off",
