--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.8.0",
         "@mui/material": "^5.8.0",
         "next": "12.1.6",
         "react": "18.1.0",
@@ -47,6 +48,7 @@
         "husky": "^8.0.1",
         "jest": "^28.1.0",
         "jest-environment-jsdom": "^28.1.0",
+        "node-mocks-http": "^1.11.0",
         "typescript": "4.6.4",
         "xo": "^0.49.0"
     }
