refactor: use absolute paths in imports

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,7 +3,11 @@
         "target": "es5",
         "lib": ["es5", "dom"],
         "types": ["node", "cypress", "@testing-library/cypress"],
-        "noEmit": true
+        "noEmit": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/support/*": ["/support/*"]
+        }
     },
     "include": ["**/*.ts", "**/*.tsx"]
 }
