--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,17 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "incremental": true
+        "incremental": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/components/*": ["src/components/*"],
+            "@/pages/*": ["src/pages/*"],
+            "@/api/*": ["src/pages/api/*"],
+            "@/styles/*": ["src/styles/*"],
+            "@/types/*": ["src/types/*"],
+            "@/utils/*": ["src/utils/*"],
+            "@/data/*": ["data/*"]
+        }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules", "public", "cypress/**/*"]
