--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "e2e": "cypress run",
         "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
-        "fc": "npm run format && npm run fix-lint && npm run check",
+        "fc": "npm run fix-lint && npm run format && npm run check",
         "prepare": "husky install"
     },
     "dependencies": {
