--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "format": "prettier --write .",
         "check-format": "prettier --check .",
         "lint": "xo",
+        "fix-lint": "xo --fix",
         "check-types": "npm run check-types:next && npm run check-types:cypress",
         "check-types:next": "tsc",
         "check-types:cypress": "tsc --project cypress/tsconfig.json",
@@ -15,7 +16,7 @@
         "e2e": "cypress run",
         "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
-        "fc": "npm run format && npm run check",
+        "fc": "npm run fix-lint && npm run format && npm run check",
         "prepare": "husky install"
     },
     "dependencies": {
@@ -48,6 +49,7 @@
         "husky": "^8.0.1",
         "jest": "^28.1.0",
         "jest-environment-jsdom": "^28.1.0",
+        "lint-staged": "^13.0.3",
         "node-mocks-http": "^1.11.0",
         "typescript": "4.6.4",
         "xo": "^0.49.0"
