--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "check-types:cypress": "tsc --project cypress/tsconfig.json",
         "test": "jest",
         "e2e": "cypress run",
+        "percy": "percy snapshot percy.json",
         "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run fix-lint && npm run format && npm run check",
@@ -33,8 +34,7 @@
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
         "@lhci/cli": "^0.9.0",
-        "@percy/cli": "^1.2.1",
-        "@percy/cypress": "^3.1.1",
+        "@percy/cli": "^1.3.1",
         "@testing-library/cypress": "^8.0.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
