--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "husky": "^8.0.1",
         "jest": "^28.1.0",
         "jest-environment-jsdom": "^28.1.0",
+        "jest-fetch-mock": "^3.0.3",
         "lint-staged": "^13.0.3",
         "node-mocks-http": "^1.11.0",
         "typescript": "4.6.4",
