--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
             "@/data/*": ["data/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["src/**/*", "next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules", "public", "cypress/**/*"]
 }
