--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "sharp": "^0.30.7"
+        "sharp": "^0.30.7",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.0.3",
@@ -41,6 +42,7 @@
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
+        "@types/uuid": "^8.3.4",
         "cypress": "^10.3.0",
         "eslint": "8.18.0",
         "eslint-config-next": "12.2.0",
