--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "sharp": "^0.30.7",
-        "uuid": "^8.3.2"
+        "uuid": "8.1.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.0.3",
@@ -53,6 +53,7 @@
         "jest-environment-jsdom": "^28.1.2",
         "jest-fetch-mock": "^3.0.3",
         "lint-staged": "^13.0.3",
+        "next-transpile-modules": "^9.0.0",
         "node-mocks-http": "^1.11.0",
         "typescript": "4.7.4",
         "xo": "^0.50.0"
