test: add cypress tests for the items tab

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run fix-lint && npm run format && npm run check",
+        "bs": "npm run build && npm start",
         "prepare": "husky install"
     },
     "dependencies": {
