--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run fix-lint && npm run format && npm run check",
+        "bs": "npm run build && npm start",
         "prepare": "husky install"
     },
     "dependencies": {
@@ -28,7 +29,8 @@
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "sharp": "^0.30.7"
+        "sharp": "^0.30.7",
+        "uuid": "8.1.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.0.3",
@@ -41,6 +43,7 @@
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
+        "@types/uuid": "^8.3.4",
         "cypress": "^10.3.0",
         "eslint": "8.18.0",
         "eslint-config-next": "12.2.0",
@@ -51,6 +54,7 @@
         "jest-environment-jsdom": "^28.1.2",
         "jest-fetch-mock": "^3.0.3",
         "lint-staged": "^13.0.3",
+        "next-transpile-modules": "^9.0.0",
         "node-mocks-http": "^1.11.0",
         "typescript": "4.7.4",
         "xo": "^0.50.0"
