--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-flippy": "^1.1.0",
         "sharp": "^0.30.7",
         "uuid": "8.1.0"
     },
