--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.6",
+        "lzbase62": "^2.0.0",
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -41,6 +42,7 @@
         "@testing-library/cypress": "^8.0.3",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
+        "@types/lzbase62": "^2.0.0",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
