--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-flippy": "^1.1.0",
-        "uuid": "8.1.0"
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.0.3",
