--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.6",
+        "lzbase62": "^2.0.0",
         "next": "12.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-flippy": "^1.1.0",
-        "sharp": "^0.30.7",
-        "uuid": "8.1.0"
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.0.3",
@@ -41,6 +41,7 @@
         "@testing-library/cypress": "^8.0.3",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
+        "@types/lzbase62": "^2.0.0",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
         "@types/react-dom": "18.0.5",
