--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "baseUrl": ".",
         "paths": {
             "@/components/*": ["src/components/*"],
+            "@/hooks/*": ["src/hooks/*"],
             "@/pages/*": ["src/pages/*"],
             "@/api/*": ["src/pages/api/*"],
             "@/services/*": ["src/services/*"],
