fix: update tests to work with Jest 28

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,12 +1,10 @@
 {
+    "extends": "@tsconfig/cypress/tsconfig.json",
     "compilerOptions": {
-        "target": "es5",
-        "lib": ["es5", "dom"],
         "types": ["node", "cypress", "@testing-library/cypress"],
         "noEmit": true,
-        "baseUrl": ".",
         "paths": {
-            "@/support/*": ["/support/*"]
+            "@/support/*": ["./support/*"]
         }
     },
     "include": ["**/*.ts", "**/*.tsx"]
