--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "@testing-library/cypress": "^8.0.3",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
+        "@tsconfig/cypress": "^1.0.0",
+        "@tsconfig/next": "^1.0.2",
         "@types/lzbase62": "^2.0.0",
         "@types/node": "18.6.3",
         "@types/react": "18.0.14",
@@ -52,8 +54,8 @@
         "eslint-config-xo-react": "^0.27.0",
         "eslint-plugin-jsx-a11y": "^6.6.0",
         "husky": "^8.0.1",
-        "jest": "^28.1.2",
-        "jest-environment-jsdom": "^28.1.2",
+        "jest": "^28.1.3",
+        "jest-environment-jsdom": "^28.1.3",
         "jest-fetch-mock": "^3.0.3",
         "lint-staged": "^13.0.3",
         "node-mocks-http": "^1.11.0",
