--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,19 @@
 {
+    "extends": "@tsconfig/next/tsconfig.json",
     "compilerOptions": {
-        "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
         "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "jsx": "preserve",
-        "incremental": true,
-        "baseUrl": ".",
         "paths": {
-            "@/components/*": ["src/components/*"],
-            "@/hooks/*": ["src/hooks/*"],
-            "@/pages/*": ["src/pages/*"],
-            "@/api/*": ["src/pages/api/*"],
-            "@/services/*": ["src/services/*"],
-            "@/styles/*": ["src/styles/*"],
-            "@/types/*": ["src/types/*"],
-            "@/utils/*": ["src/utils/*"],
-            "@/data/*": ["data/*"]
+            "@/components/*": ["./src/components/*"],
+            "@/hooks/*": ["./src/hooks/*"],
+            "@/pages/*": ["./src/pages/*"],
+            "@/api/*": ["./src/pages/api/*"],
+            "@/services/*": ["./src/services/*"],
+            "@/styles/*": ["./src/styles/*"],
+            "@/types/*": ["./src/types/*"],
+            "@/utils/*": ["./src/utils/*"],
+            "@/data/*": ["./data/*"]
         }
     },
     "include": ["src/**/*", "next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules", "public", "cypress/**/*"]
+    "exclude": ["node_modules", "public", "cypress"]
 }
