--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,8 +3,9 @@
     "compilerOptions": {
         "types": ["node", "cypress", "@testing-library/cypress"],
         "noEmit": true,
+        "baseUrl": ".",
         "paths": {
-            "@/support/*": ["./support/*"]
+            "@/support/*": ["support/*"]
         }
     },
     "include": ["**/*.ts", "**/*.tsx"]
