--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.9.3",
+        "lodash.groupby": "^4.6.0",
         "lzbase62": "^2.0.0",
         "next": "12.2.3",
         "react": "18.2.0",
@@ -43,6 +44,7 @@
         "@testing-library/react": "^13.3.0",
         "@tsconfig/cypress": "^1.0.0",
         "@tsconfig/next": "^1.0.2",
+        "@types/lodash.groupby": "^4.6.7",
         "@types/lzbase62": "^2.0.0",
         "@types/node": "18.6.3",
         "@types/react": "18.0.14",
