--- a/.xo-config.json
+++ b/.xo-config.json
@@ -13,7 +13,8 @@
             {
                 "namedComponents": "arrow-function"
             }
-        ]
+        ],
+        "unicorn/no-array-for-each": "off"
     },
     "ignores": ["public/**/*", "next-env.d.ts", "*.config.js"]
 }
