--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@emotion/styled": "^11.10.4",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.9.3",
+        "lodash.clonedeep": "^4.5.0",
         "lodash.groupby": "^4.6.0",
         "lzbase62": "^2.0.0",
         "next": "12.2.4",
@@ -44,6 +45,7 @@
         "@testing-library/react": "^13.4.0",
         "@tsconfig/cypress": "^1.0.0",
         "@tsconfig/next": "^1.0.2",
+        "@types/lodash.clonedeep": "^4.5.7",
         "@types/lodash.groupby": "^4.6.7",
         "@types/lzbase62": "^2.0.0",
         "@types/node": "18.7.14",
