--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "next": "^13.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-flippy": "^1.1.0",
+        "@ceva24/react-flippy": "^1.2.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
