--- a/package.json
+++ b/package.json
@@ -22,45 +22,45 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.10.4",
-        "@mui/icons-material": "^5.10.9",
-        "@mui/material": "^5.9.3",
+        "@ceva24/react-flippy": "^1.2.0",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/icons-material": "^5.10.16",
+        "@mui/material": "^5.10.17",
         "lodash.groupby": "^4.6.0",
         "lzbase62": "^2.0.0",
-        "next": "12.2.4",
+        "next": "^13.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-flippy": "^1.1.0",
-        "uuid": "^8.3.2"
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^17.1.2",
-        "@commitlint/config-conventional": "^17.0.3",
-        "@lhci/cli": "^0.9.0",
-        "@percy/cli": "^1.10.1",
-        "@testing-library/cypress": "^8.0.3",
+        "@commitlint/cli": "^17.3.0",
+        "@commitlint/config-conventional": "^17.3.0",
+        "@lhci/cli": "^0.10.0",
+        "@percy/cli": "^1.16.0",
+        "@testing-library/cypress": "^8.0.7",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@tsconfig/cypress": "^1.0.1",
-        "@tsconfig/next": "^1.0.2",
+        "@tsconfig/next": "^1.0.4",
         "@types/lodash.groupby": "^4.6.7",
         "@types/lzbase62": "^2.0.0",
-        "@types/node": "18.7.14",
-        "@types/react": "18.0.14",
-        "@types/react-dom": "18.0.8",
-        "@types/uuid": "^8.3.4",
-        "cypress": "^10.9.0",
-        "eslint": "8.23.0",
-        "eslint-config-next": "12.2.3",
+        "@types/node": "18.11.13",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.9",
+        "@types/uuid": "^9.0.0",
+        "cypress": "^11.2.0",
+        "eslint": "8.29.0",
+        "eslint-config-next": "13.0.6",
         "eslint-config-xo-react": "^0.27.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
-        "husky": "^8.0.1",
-        "jest": "^28.1.3",
-        "jest-environment-jsdom": "^29.0.1",
-        "lint-staged": "^13.0.3",
-        "node-mocks-http": "^1.11.0",
-        "typescript": "4.7.4",
-        "xo": "^0.52.4"
+        "husky": "^8.0.2",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
+        "lint-staged": "^13.1.0",
+        "node-mocks-http": "^1.12.1",
+        "typescript": "4.9.4",
+        "xo": "^0.53.1"
     }
 }
