--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.10.16",
         "@mui/material": "^5.10.17",
+        "lodash.clonedeep": "^4.5.0",
         "lodash.groupby": "^4.6.0",
         "lzbase62": "^2.0.0",
         "next": "^13.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-string-replace": "^1.1.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
@@ -44,6 +46,7 @@
         "@testing-library/react": "^13.4.0",
         "@tsconfig/cypress": "^1.0.1",
         "@tsconfig/next": "^1.0.4",
+        "@types/lodash.clonedeep": "^4.5.7",
         "@types/lodash.groupby": "^4.6.7",
         "@types/lzbase62": "^2.0.0",
         "@types/node": "18.11.13",
