feat: show the enhancement icon for selected enhancements

--- a/.xo-config.json
+++ b/.xo-config.json
@@ -6,6 +6,7 @@
         "import/extensions": ["error", { "tsx": "never" }],
         "react/jsx-indent": "off",
         "react/jsx-indent-props": "off",
+        "react/jsx-no-duplicate-props": ["error", { "ignoreCase": false }],
         "react/jsx-tag-spacing": "off",
         "react/react-in-jsx-scope": "off",
         "react/function-component-definition": [
