--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "next": "^13.1.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-error-boundary": "^3.1.4",
         "react-string-replace": "^1.1.0",
         "uuid": "^9.0.0"
     },
