--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@mui/material": "^5.11.6",
         "lodash.clonedeep": "^4.5.0",
         "lodash.groupby": "^4.6.0",
+        "lodash.partition": "^4.6.0",
         "lzbase62": "^2.0.0",
         "next": "^13.1.5",
         "react": "18.2.0",
@@ -49,6 +50,7 @@
         "@tsconfig/next": "^1.0.5",
         "@types/lodash.clonedeep": "^4.5.7",
         "@types/lodash.groupby": "^4.6.7",
+        "@types/lodash.partition": "^4.6.7",
         "@types/lzbase62": "^2.0.0",
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
