--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,6 @@ updates:
     schedule:
       interval: weekly
     target-branch: chore/update-dependencies
-    open-pull-request-limit: 100
+    open-pull-requests-limit: 100
     commit-message:
       prefix: chore
