--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,8 @@ updates:
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: monthly
-    ignore:
-      - dependency-name: react
-      - dependency-name: react-dom
+      interval: weekly
+    target-branch: chore/update-dependencies
+    open-pull-requests-limit: 100
     commit-message:
       prefix: chore
