ci: update cypress github action

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -28,4 +28,5 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          CYPRESS_GROUP: ${{ github.event_name }}
           COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
