--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -24,10 +24,11 @@ jobs:
           build: npm run build
           start: npm start
           record: true
-          group: ${{ github.event_name }}
+          parallel: true
         env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
-          COMMIT_INFO_SHA: ${{ github.event.pull_request.head.sha }}
-          CYPRESS_GROUP: ${{ github.event_name }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # CYPRESS_GROUP: ${{ github.event_name }}
+          # COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
+          # COMMIT_INFO_SHA: ${{ github.event.pull_request.head.sha }}
