--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
             "@/loaders/*": ["src/loaders/*"],
             "@/pages/*": ["src/pages/*"],
             "@/services/*": ["src/services/*"],
+            "@/transformers/*": ["src/transformers/*"],
             "@/types/*": ["src/types/*"],
             "@/utils/*": ["src/utils/*"],
             "@/data/*": ["data/*"],
