--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "extends": "@tsconfig/next/tsconfig.json",
     "compilerOptions": {
-        "strict": true,
         "baseUrl": ".",
         "paths": {
             "@/components/*": ["src/components/*"],
@@ -19,6 +18,6 @@
             "@/test/*": ["src/__tests__/*"]
         }
     },
-    "include": ["src/**/*", "next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["next-env.d.ts", ".next/types/**/*.ts", "src/**/*"],
     "exclude": ["node_modules", "public", "cypress"]
 }
