--- a/.xo-config.json
+++ b/.xo-config.json
@@ -1,5 +1,11 @@
 {
-    "extends": ["xo-react", "plugin:jsx-a11y/strict", "plugin:prettier/recommended", "plugin:@next/next/recommended"],
+    "extends": [
+        "xo-react",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:jsx-a11y/strict",
+        "plugin:prettier/recommended",
+        "plugin:@next/next/recommended"
+    ],
     "rules": {
         "@next/next/no-img-element": "off",
         "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
