--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@types/react": "18.0.29",
         "@types/react-dom": "18.0.11",
         "@types/uuid": "^9.0.1",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
         "cypress": "^12.8.1",
         "eslint": "8.36.0",
         "eslint-config-next": "13.2.4",
