--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "check-types:cypress": "tsc --project cypress/tsconfig.json",
         "test": "jest",
         "e2e": "cypress run",
-        "percy": "percy snapshot percy.json",
+        "vis": "percy snapshot percy.json",
         "perf": "lhci autorun",
         "check": "npm run check-format && npm run lint && npm run check-types && npm run test",
         "fc": "npm run fix-lint && npm run format && npm run check",
