build: enable noImplicitAny compiler option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "@tsconfig/next/tsconfig.json",
     "compilerOptions": {
+        "noImplicitAny": true,
         "baseUrl": ".",
         "paths": {
             "@/components/*": ["src/components/*"],
