--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "types": ["node", "cypress", "@testing-library/cypress"],
         "noEmit": true,
+        "noImplicitAny": true,
         "baseUrl": ".",
         "paths": {
             "@/support/*": ["support/*"]
