--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "@tsconfig/next/tsconfig.json",
     "compilerOptions": {
         "noImplicitAny": true,
+        "useUnknownInCatchVariables": true,
         "baseUrl": ".",
         "paths": {
             "@/components/*": ["src/components/*"],
