--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "react-dom": "18.2.0",
         "react-error-boundary": "^4.0.2",
         "react-string-replace": "^1.1.0",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.5.0",
