--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.14",
+        "axios": "^1.3.4",
         "lodash.clonedeep": "^4.5.0",
         "lodash.groupby": "^4.6.0",
         "lodash.partition": "^4.6.0",
@@ -37,7 +38,9 @@
         "react-dom": "18.2.0",
         "react-error-boundary": "^4.0.2",
         "react-string-replace": "^1.1.0",
-        "uuid": "^9.0.0"
+        "swr": "^2.1.2",
+        "uuid": "^9.0.0",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.5.0",
