--- a/.xo-config.json
+++ b/.xo-config.json
@@ -22,6 +22,13 @@
                 "namedComponents": "arrow-function"
             }
         ],
+        "unicorn/filename-case": [
+            "error",
+            {
+                "case": "kebabCase",
+                "ignore": ["\\[.+\\]\\.ts"]
+            }
+        ],
         "unicorn/no-array-for-each": "off",
         "unicorn/switch-case-braces": "off"
     },
