chore: migrate to havenplanner.app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gloomhaven-character-planner",
+    "name": "havenplanner",
     "private": true,
     "scripts": {
         "dev": "next dev",
