feat: add enhanced card images feature flag

--- a/.xo-config.json
+++ b/.xo-config.json
@@ -12,6 +12,7 @@
         "@typescript-eslint/no-implicit-any-catch": "off",
         "import/extensions": ["error", { "tsx": "never" }],
         "import/no-extraneous-dependencies": ["error", { "includeTypes": false }],
+        "n/prefer-global/process": ["error", "always"],
         "react/jsx-indent": "off",
         "react/jsx-indent-props": "off",
         "react/jsx-no-duplicate-props": ["error", { "ignoreCase": false }],
